# webapi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: HTTPServer.cpp  HTTPServer.hpp  Result.hpp  base64.cpp  base64.h  main.cpp  typedefs.hpp
src/auth/: BasicAuthenticator.cpp  BasicAuthenticator.hpp  IAuthenticator.hpp
src/controllers/: IController.hpp  PersonController.cpp  PersonController.hpp  UserController.cpp  UserController.hpp  utils.cpp  utils.hpp
src/db/: SQLiteBackend.cpp  SQLiteBackend.hpp
src/entities/: Entity.hpp  Person.hpp  User.hpp  serialization.cpp
src/repositories/: IPersonRepository.hpp  IRepository.hpp  PersonRepository.cpp  PersonRepository.hpp  Repository.cpp  Repository.hpp  SQLiteRepository.cpp  SQLiteRepository.hpp  UserRepository.cpp  UserRepository.hpp
src/services/: PersonService.cpp  PersonService.hpp  UserService.cpp  UserService.hpp
www/: index.html
www/js/: index.js
